# DogBarking

./: .gitignore  .pre-commit-config.yaml  Readme.md  gui.py  main.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yaml
dogbarking/: __main__.py  audio.py  email.py  math.py
